<resources>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="accept">Accept</string>
    <string name="action_report">Báo lỗi</string>
    <string name="action_share">Chia sẻ</string>
    <string name="admod_banner_bottom">ca-app-pub-9477641253300556/7337058869</string>
    <string name="admod_banner_interstitial">ca-app-pub-9477641253300556/4824244460</string>
    <string name="admod_banner_top">ca-app-pub-9477641253300556/3487112061</string>
    <string name="app_name">Karaoke Vietnam</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="backtosonglist">Quay lại</string>
    <string name="backupemail">Email</string>
    <string name="backuperrorEmailRequired">Bạn chưa nhập Email</string>
    <string name="backuperrorFullnameRequired">Bạn chưa nhập Họ tên</string>
    <string name="backuperrorInternetRequired">Bạn cần có kết nối Internet để tiếp tục.</string>
    <string name="backuperrorNull">Tài khoản này chưa có bài hát nào được lưu.</string>
    <string name="backuperrorPhoneRequired">Thông tin không đúng. Hãy thử lại.</string>
    <string name="backuperrorSongListRequired">Danh sách yêu thích của bạn đang còn trống.</string>
    <string name="backuperrorUnknown">Có lỗi trong quá trình lưu dữ liệu. Hãy thử lại.</string>
    <string name="backupfullname">Họ và Tên</string>
    <string name="backuphelp">"Danh sách yêu thích của bạn sẽ được lưu trên mạng (tài khoản được tạo từ Email và Số điện thoại ở trên). 

Dùng nút DOWNLOAD để đưa danh sách này vào các thiết bị khác của bạn."</string>
    <string name="backupphone">Số điện thoại</string>
    <string name="backupsuccess">Thông tin của bạn đã được lưu thành công.</string>
    <string name="backupurl">http://vndroid.com/apps/karaokevietnam.php</string>
    <string name="choise_cancel">Hủy bỏ</string>
    <string name="choise_update">Cập nhật</string>
    <string name="choise_update_not">Bỏ qua</string>
    <string name="clear_button">Xoá chữ</string>
    <string name="com.crashlytics.android.build_id">89ef5230-775f-4323-9721-ea540cd0da3f</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="err_network_warming">Bạn phải kết nối mạng để sử dụng chức năng này.</string>
    <string name="err_noti_no_content">Không có dữ liệu</string>
    <string name="err_search_no_content">Không tìm thấy bài bát bạn tìm kiếm</string>
    <string name="err_search_no_content_retry">Xin vui lòng thử lại</string>
    <string name="err_unknown">Có lỗi xảy ra %s, xin vui lòng thử lại sau</string>
    <string name="explore_spinner_prompt">Danh mục bài hát</string>
    <string name="exploreletter_spinner_prompt">Ký tự bắt đầu bài hát</string>
    <string name="facebook_app_id">496404013872805</string>
    <string name="facebook_url_share">https://play.google.com/store/apps/details?id=bloghoctap.android.karaokevietnam</string>
    <string name="fanpagetext">Fanpage: facebook.com/karaokeVietnamApp</string>
    <string name="favbackup">Lưu online</string>
    <string name="favimport">Đồng bộ</string>
    <string name="ga_trackingId">UA-38830891-2</string>
    <string name="gcm_defaultSenderId">790533278587</string>
    <string name="google_app_id">1:790533278587:android:204b97af790904c2</string>
    <string name="importerrorUnknown">Có lỗi trong quá trình lấy dữ liệu. Hãy thử lại.</string>
    <string name="importhelp">Cập nhật danh sách yêu thích từ danh sách Backup Online của bạn. Hãy nhập đúng cặp Email và Số điện thoại mà bạn đã dùng khi tạo bản Lưu Online.</string>
    <string name="importsuccess">Danh sách yêu thích của bạn đã được download và cập nhật.</string>
    <string name="importurl">http://vndroid.com/apps/karaokevietnam.php?import=1</string>
    <string name="initsong">Cài đặt danh sách bài hát cho lần đầu dùng chương trình.</string>
    <string name="initsongdone">Danh sách bài hát đã cập nhật xong.</string>
    <string name="loadmoresong">Hiển thị thêm..</string>
    <string name="manufacture_arirang">Arirang 5 số (hầu hết các quán Karaoke ở Việt Nam)</string>
    <string name="manufacture_california">California 6 số</string>
    <string name="manufacture_musiccore">MusicCore</string>
    <string name="msg_update">KaraokeVietnam đã có phiên bản mới. Bạn có muốn cập nhật ngay?</string>
    <string name="msg_update_force">KaraokeVietnam đã có phiên bản mới. Bạn phải cập nhật mới có thể tiếp tục sử dụng phần mềm.</string>
    <string name="nav_bar_hot_news">Tin hot</string>
    <string name="nav_bar_notification">Thông báo</string>
    <string name="player_arirang">Arirang (5xxxx)</string>
    <string name="player_music_core">MusicCore (6xxxx)</string>
    <string name="searchhint">bạn muốn tìm gì? :)</string>
    <string name="text_dialog_backup_title">Để dùng chức năng này, bạn vui lòng</string>
    <string name="text_dialog_btn_back">Trở lại</string>
    <string name="text_dialog_btn_fb">Sử dụng tài khoản facebook</string>
    <string name="text_dialog_btn_phone">Xác nhận</string>
    <string name="text_dialog_content">"Danh sách yêu thích của bạn sẽ được lưu trên mạng (Tài khoản được tạo từ facebook bạn cung cấp ở trên) 
Dùng nút ĐỒNG BỘ để đưa danh sách này vào thiết bị của bạn"</string>
    <string name="text_dialog_content_2">Hoặc sử dụng email và số điện thoại bạn đã đăng ký</string>
    <string name="text_dialog_email_hint">Nhập email của bạn</string>
    <string name="text_dialog_or">Hoặc</string>
    <string name="text_dialog_phone_hint">Nhập số điện thoại của bạn</string>
    <string name="text_dialog_restore_title">Đồng bộ tài khoản</string>
    <string name="text_help_search_content">"
Tìm “Chắc ai đó sẽ về”, có thể gõ “cadsv” hoặc “chac ai do se ve” hoặc “anh tim noi nho” (Câu đầu tiên của bài hát)

Tìm “Sơn Tùng MTP”, có thể gõ “son tung mtp” hoặc “Son Tung MTP”

Có dấu hay khong dau, IN HOA hay viết thường đều được chấp nhận"</string>
    <string name="text_help_search_title">Hướng dẫn tìm kiếm:</string>
    <string name="text_like_fanpage">Like fanpage Karaoke Vietnam</string>
    <string name="text_rating_btn_cancel">Không thích lắm</string>
    <string name="text_rating_btn_feedback">Lên Fanpage và gửi tin nhắn góp ý</string>
    <string name="text_rating_btn_vote">Dùng rất tốt, vote 5 sao luôn!</string>
    <string name="text_rating_title_1">Bạn hài lòng với Karaoke Vietnam chứ?</string>
    <string name="text_rating_title_2">Bạn vui lòng cho Karaoke Vietnam góp ý chi tiết hơn nhé. Chúng tôi sẽ cố gắng hoàn thiện tốt hơn</string>
    <string name="text_vote_app">Đánh giá ủng hộ Karaoke Vietnam</string>
</resources>