<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:background="@drawable/bg_btn_shape_white" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:minWidth="200.0dip" android:layout_centerInParent="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="@color/co_text_nomal_gray" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/text_dialog_backup_title" />
                <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:gravity="left|center" android:id="@id/btn_facebook_login" android:background="@drawable/sel_btn_detail_fb" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/text_dialog_btn_fb" android:drawableLeft="@drawable/icon_facebook" android:drawablePadding="15.0dip" />
                <TextView android:textSize="14.0sp" android:textColor="@color/co_text_nomal_gray" android:gravity="center" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_dialog_or" />
                <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:weightSum="3.0">
                    <EditText android:textSize="14.0sp" android:textColor="@color/co_text_nomal_gray" android:ellipsize="end" android:gravity="left|center" android:id="@id/txt_phone_number" android:background="@drawable/bg_text_view" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="5.0dip" android:hint="@string/text_dialog_phone_hint" android:singleLine="true" android:layout_weight="1.0" android:inputType="phone" />
                    <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/btn_phone" android:background="@drawable/sel_btn_shape_orange" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/text_dialog_btn_phone" android:layout_weight="2.0" />
                </LinearLayout>
                <TextView android:textSize="14.0sp" android:textColor="@color/co_text_nomal_gray" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/text_dialog_content" />
            </LinearLayout>
            <View android:background="#ffc8c7cc" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <Button android:textSize="14.0sp" android:textColor="@color/co_text_nomal_gray" android:gravity="center" android:id="@id/btn_cancel" android:background="@drawable/sel_btn_dialog_gray_conner_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/di_btn_height" android:text="@string/text_dialog_btn_back" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>