<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/co_bg_layout" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_rating_vote" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/co_text_nomal_gray_blur" android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_rating_title_1" android:layout_toLeftOf="@id/btn_rating_cancel" android:layout_alignParentLeft="true" />
            <ImageView android:id="@id/btn_rating_cancel" android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/icon_cancel" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_margin="10.0dip">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/btn_rating_vote" android:background="@drawable/sel_btn_rating_vote" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_rating_btn_vote" android:layout_toLeftOf="@id/btn_rating_cancel" android:layout_alignParentLeft="true" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_vote_start" />
            </LinearLayout>
            <Button android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_rating_show_feedback" android:background="@drawable/sel_btn_rating_cancel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/text_rating_btn_cancel" android:layout_weight="2.0" android:layout_toRightOf="@id/btn_music_core" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_rating_feedback" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/co_text_nomal_gray_blur" android:gravity="left" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_rating_title_2" android:layout_toLeftOf="@id/btn_rating_feedback_cancel" android:layout_alignParentLeft="true" />
            <ImageView android:id="@id/btn_rating_feedback_cancel" android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/icon_cancel" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_rating_feedback" android:background="@drawable/sel_btn_rating_vote" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_margin="10.0dip" android:text="@string/text_rating_btn_feedback" android:layout_weight="2.0" android:layout_toRightOf="@id/btn_music_core" />
    </LinearLayout>
</RelativeLayout>