<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/co_bg_layout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@id/ll_rating"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_bar">

            <include layout="@layout/layout_rating" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/search_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/co_bg_layout_blue"
            android:gravity="fill_vertical"
            android:orientation="vertical"
            android:weightSum="1.0">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dip"
                android:background="@drawable/bg_btn_shape_white"
                android:padding="2.0dip">

                <bloghoctap.android.karaokevietnam.widget.CustomEditText
                    android:id="@id/edt_search_keyword"
                    android:layout_width="fill_parent"
                    android:layout_height="35.0dip"
                    android:background="@drawable/bg_edt_search"
                    android:hint="@string/searchhint"
                    android:imeOptions="actionSearch"
                    android:paddingLeft="7.0dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="14.0sp">

                    <requestFocus />
                </bloghoctap.android.karaokevietnam.widget.CustomEditText>

                <ImageView
                    android:id="@id/img_btn_search"
                    android:layout_width="28.0dip"
                    android:layout_height="28.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_tab_search" />
            </RelativeLayout>

            <LinearLayout
                android:id="@id/ll_manufacture"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingBottom="5.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="5.0dip">

                <Button
                    android:id="@id/btn_arirang"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/sel_btn_left"
                    android:drawablePadding="5.0dip"
                    android:paddingLeft="20.0dip"
                    android:text="@string/player_arirang"
                    android:textColor="@drawable/sel_co_text_state_white"
                    android:textSize="@dimen/di_text_normal" />

                <Button
                    android:id="@id/btn_music_core"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:background="@drawable/sel_btn_right"
                    android:drawablePadding="5.0dip"
                    android:paddingLeft="20.0dip"
                    android:text="@string/player_music_core"
                    android:textColor="@drawable/sel_co_text_state_white"
                    android:textSize="@dimen/di_text_normal" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@color/co_divider" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/fr_content_search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_rating"
        android:background="@color/co_bg_layout">

        <LinearLayout
            android:id="@id/ll_search_help"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10.0dip"
            android:visibility="visible">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_help_search_title"
                android:textColor="@color/co_text_nomal_gray_blur"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_help_search_content"
                android:textColor="@color/co_text_nomal_gray_blur"
                android:textSize="12.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ll_search_no_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10.0dip"
            android:visibility="gone">

            <ImageView
                android:layout_width="200.0dip"
                android:layout_height="200.0dip"
                android:layout_gravity="center"
                android:src="@drawable/img_default_nocontent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/err_search_no_content"
                android:textColor="@color/co_text_nomal_gray_blur"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/err_search_no_content_retry"
                android:textColor="@color/co_text_nomal_gray_blur"
                android:textSize="14.0sp" />
        </LinearLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@id/lvListSongs"
            style="@style/style_app_pull_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <ProgressBar
            android:id="@id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50.0dip" />
    </RelativeLayout>
</LinearLayout>